--- a/app/about_us/about_us.module.scss
+++ b/app/about_us/about_us.module.scss
@@ -11,5 +11,8 @@
       text-indent: 5vmin;
       text-align: justify;
     }
+    @media only screen and (max-width: s.$max-width) {
+      width: 90%;
+    }
   }
 }
