--- a/components/Footer/footer.module.scss
+++ b/components/Footer/footer.module.scss
@@ -7,4 +7,8 @@
   color: white;
   font-size: 2.5vmin;
   font-family: Edwardian Script ITC;
+
+  @media only screen and (max-width: s.$max-width) {
+    font-size: 6vmin;
+  }
 }
