--- a/components/Input/input_checkbox.module.scss
+++ b/components/Input/input_checkbox.module.scss
@@ -1,8 +1,14 @@
+@use "../styles/variables.scss" as s;
+
 .input_checkbox {
   background-color: transparent;
   border-radius: 1vmin;
   margin-right: 1vmin;
 }
+
 .input_checkbox_label {
   font-size: 2vmin;
+  @media only screen and (max-width: s.$max-width) {
+    font-size: 4vmin;
+  }
 }
