--- a/components/Input/input_text.module.scss
+++ b/components/Input/input_text.module.scss
@@ -1,3 +1,5 @@
+@use "../styles/variables.scss" as s;
+
 .input_text {
   display: block;
   padding: 1vmin;
@@ -8,5 +10,8 @@
   border-bottom: solid #ccc 1px;
   &:focus {
     outline: none;
+  }
+  @media only screen and (max-width: s.$max-width) {
+    font-size: 5vmin;
   }
 }
