--- a/styles/global.scss
+++ b/styles/global.scss
@@ -28,6 +28,10 @@ body {
       font-family: Engravers Gothic BT;
     }
   }
+
+  @media only screen and (max-width: s.$max-width) {
+    grid-template-rows: 20% 1fr 5%;
+  }
 }
 
 @font-face {
