--- a/app/gift/gift.module.scss
+++ b/app/gift/gift.module.scss
@@ -1,6 +1,6 @@
 @use "../styles/variables.scss" as s;
 
-.about_us {
+.gift {
   width: 100%;
   height: 100%;
   @include s.vertical-center-content;
