--- a/components/Input/input_text.module.scss
+++ b/components/Input/input_text.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   border: none;
   background-color: transparent;
-  border-bottom: solid #ccc 1px;
+  border-bottom: solid s.$theme-shadow 1px;
   &:focus {
     outline: none;
   }
