--- a/components/Input/input_checkbox.module.scss
+++ b/components/Input/input_checkbox.module.scss
@@ -1,4 +1,4 @@
-@use "../styles/variables.scss" as s;
+@use "../../styles/variables.scss" as s;
 
 .input_checkbox {
   background-color: transparent;
