--- a/components/Input/input_submit.module.scss
+++ b/components/Input/input_submit.module.scss
@@ -6,7 +6,7 @@
   padding: 1vmin;
   width: 20%;
   font-size: 2vmin;
-  background-color: transparent;
+  background-color: s.$theme-green;
   border-radius: 1vmin;
   box-shadow: 0 0.5vmin 1vmin s.$theme-shadow;
 
