--- a/app/_pages/gift/gift.module.scss
+++ b/app/_pages/gift/gift.module.scss
@@ -1,8 +1,13 @@
 @use "../../../styles/variables.scss" as s;
 
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .gift {
   width: 100%;
-  height: 100%;
   @include s.vertical-center-content;
 
   &__content {
