--- a/app/_pages/home/home.module.scss
+++ b/app/_pages/home/home.module.scss
@@ -1,7 +1,7 @@
 @use "../../../styles/variables.scss" as s;
 
 .home {
-  height: 100%;
+  height: 100vh;
   @include s.center-content;
 
   &__img {
