--- a/app/_pages/information/information.module.scss
+++ b/app/_pages/information/information.module.scss
@@ -1,23 +1,29 @@
 @use "../../../styles/variables.scss" as s;
 
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .information {
   width: 100%;
-  height: 100%;
   @include s.vertical-center-content;
 
   &__content {
     width: 60%;
-
-    section {
-      text-align: center;
-      p {
-        font-family: Engravers Gothic BT;
-        font-size: 3vmin;
-      }
-    }
+    text-align: center;
 
     @media only screen and (max-width: s.$max-width) {
       width: 90%;
+    }
+  }
+
+  &__text {
+    font-family: Engravers Gothic BT;
+    font-size: 3vmin;
+    @media only screen and (max-width: s.$max-width) {
+      font-size: 5vmin;
     }
   }
 
