--- a/app/_pages/rsvp/rsvp.module.scss
+++ b/app/_pages/rsvp/rsvp.module.scss
@@ -1,10 +1,16 @@
 @use "../../../styles/variables.scss" as s;
 
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .rsvp {
   width: 100%;
-  height: 100%;
   @include s.vertical-center-content;
 }
+
 .feedback {
   &__success {
     color: darken(s.$theme-green, 30%);
