--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -4,20 +4,20 @@
   font-size: 3vmin;
   font-family: Engravers Gothic BT;
   @include s.theme-color-black;
-
-  @media only screen and (max-width: s.$max-width) {
-    font-size: 6vmin;
-  }
 }
 
 .header {
-  grid-area: header;
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
   padding: 2vh 0;
   border-bottom: s.$theme-green solid 0.5vh;
+  z-index: 100;
+  backdrop-filter: blur(6px);
 
   &__link {
     @include link;
@@ -26,9 +26,6 @@
     &:focus,
     &:active,
     &:hover {
-      text-decoration-line: underline;
-      text-decoration-style: wavy;
-      text-decoration-color: s.$theme-red;
       text-shadow: 1vmin;
     }
   }
@@ -37,9 +34,5 @@
     @include link;
     text-decoration-line: underline;
     text-decoration-style: solid;
-  }
-
-  @media only screen and (max-width: s.$max-width) {
-    flex-direction: column;
   }
 }
