--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -9,7 +9,7 @@
 .header {
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -18,6 +18,7 @@
   border-bottom: s.$theme-green solid 0.5vh;
   z-index: 100;
   backdrop-filter: blur(6px);
+  box-sizing: border-box;
 
   &__link {
     @include link;
