--- a/app/_pages/information/information.module.scss
+++ b/app/_pages/information/information.module.scss
@@ -22,6 +22,9 @@
   &__text {
     font-family: Engravers Gothic BT;
     font-size: 3vmin;
+    margin: 1vmin 0;
+    line-height: 90%;
+
     @media only screen and (max-width: s.$max-width) {
       font-size: 5vmin;
     }
