--- a/components/Input/input_number.module.scss
+++ b/components/Input/input_number.module.scss
@@ -17,12 +17,15 @@
     &:focus {
       outline: none;
     }
+
+    @media only screen and (max-width: s.$max-width) {
+      font-size: 5vmin;
+    }
   }
 
   @media only screen and (max-width: s.$max-width) {
     width: 100%;
     font-size: 5vmin;
     padding: 2vmin;
-    box-shadow: 0 1vmin 2vmin s.$theme-shadow;
   }
 }
