small letter size fix

--- a/app/_pages/gift/gift.module.scss
+++ b/app/_pages/gift/gift.module.scss
@@ -15,6 +15,7 @@
     text-align: center;
     margin: 1vmin 0;
     font-family: Engravers Gothic BT;
+    font-size: 2.5vmin;
 
     @media only screen and (max-width: s.$max-width) {
       width: 90%;
